--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 atomicwrites==1.1.5
 attrs==18.1.0
 Automat==0.7.0
+certifi==2018.4.16
+chardet==3.0.4
 constantly==15.1.0
 httplib2==0.11.3
 hyperlink==18.0.0
@@ -15,6 +17,8 @@ PyHamcrest==1.9.0
 pytest==3.6.3
 python-dateutil==2.7.3
 pytz==2018.5
+requests==2.19.1
 six==1.11.0
 Twisted==18.7.0
+urllib3==1.23
 zope.interface==4.5.0
