--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Automat==0.7.0
 certifi==2018.4.16
 chardet==3.0.4
 constantly==15.1.0
+coverage==4.5.1
 httplib2==0.11.3
 hyperlink==18.0.0
 icalendar==4.0.2
