--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,4 @@
-atomicwrites==1.3.0
-attrs==19.1.0
-Automat==0.7.0
-certifi==2019.6.16
-chardet==3.0.4
-constantly==15.1.0
-coverage==4.5.4
-httplib2==0.13.1
-hyperlink==19.0.0
-icalendar==4.0.3
--e git+https://github.com/fscs/icalevents.git@master#egg=icalevents
-idna==2.8
-incremental==17.5.0
-more-itertools==7.2.0
-pluggy==0.12.0
-py==1.10.0
-PyHamcrest==1.9.0
-pytest==5.1.0
-python-dateutil==2.8.0
-pytz==2019.2
-requests==2.22.0
-six==1.12.0
-Twisted==19.7.0
-urllib3==1.25.3
-zope.interface==4.6.0
+Twisted==22.10.0
+icalevents==0.1.27
+pytz==2021.3
+requests==2.31.0
